// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum UserRole {
  CUSTOMER
  VENDOR
  ADMIN
}

enum OrderStatus {
  PENDING
  PROCESSING
  SHIPPED
  DELIVERED
  CANCELLED
}

enum DiscountType {
  PERCENTAGE
  FIXED
}

enum ComponentType {
  HERO
  IMAGE_GALLERY
  VIDEO_EMBED
  TEXT_BLOCK
  FEATURED_COLLECTION
  COUNTDOWN_TIMER
  FAQ_ACCORDION
  BANNER_CAROUSEL
  MAP_LOCATION
}

model User {
  id            String    @id @default(cuid())
  email         String    @unique
  name          String?
  password      String
  role          UserRole  @default(CUSTOMER)
  emailVerified DateTime?
  image         String?
  isActive      Boolean   @default(true)
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  accounts      Account[]
  sessions      Session[]
  
  // Shopify-specific relations
  vendorProfile VendorProfile?
  orders        Order[]
  cart          Cart?
  addresses     Address[]
  
  // New relations
  wishlist          Wishlist?
  reviews           Review[]
  productViews      ProductView[]
  favoriteShops     FavoriteShop[]
  chatConversations ChatConversation[]

  @@map("users")
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String? @db.Text
  access_token      String? @db.Text
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.Text
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@map("accounts")
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("sessions")
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
  @@map("verification_tokens")
}

model PasswordResetToken {
  identifier String
  token      String   @unique
  expires    DateTime
  createdAt  DateTime @default(now())

  @@unique([identifier, token])
  @@map("password_reset_tokens")
}

// Shopify-specific models

model VendorProfile {
  id          String   @id @default(cuid())
  userId      String   @unique
  storeName   String
  description String?
  favicon     String?  // Shop favicon URL
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  // Payment settings (VietQR for Vietnam)
  bankId          String?  // Bank code (e.g., "VCB", "TCB", "MB")
  bankAccount     String?  // Account number
  bankAccountName String?  // Account holder name (no diacritics, uppercase)

  user              User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  products          Product[]
  shopTemplate      ShopTemplate?
  coupons           Coupon[]
  favoritedBy       FavoriteShop[]
  chatConversations ChatConversation[]

  @@map("vendor_profiles")
}

model FavoriteShop {
  id        String   @id @default(cuid())
  userId    String
  vendorId  String
  addedAt   DateTime @default(now())

  user   User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  vendor VendorProfile @relation(fields: [vendorId], references: [id], onDelete: Cascade)

  @@unique([userId, vendorId])
  @@map("favorite_shops")
}

// Chat system
model ChatConversation {
  id        String   @id @default(cuid())
  userId    String   // Customer
  vendorId  String   // Vendor profile
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user     User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  vendor   VendorProfile @relation(fields: [vendorId], references: [id], onDelete: Cascade)
  messages ChatMessage[]

  @@unique([userId, vendorId])
  @@index([userId])
  @@index([vendorId])
  @@map("chat_conversations")
}

model ChatMessage {
  id             String   @id @default(cuid())
  conversationId String
  senderId       String   // User ID of sender
  senderType     String   // "USER" or "VENDOR"
  content        String   @db.Text
  isRead         Boolean  @default(false)
  createdAt      DateTime @default(now())

  conversation ChatConversation @relation(fields: [conversationId], references: [id], onDelete: Cascade)

  @@index([conversationId])
  @@index([createdAt])
  @@index([conversationId, isRead, senderType]) // Composite index for unread count queries
  @@map("chat_messages")
}

// Category model for product organization
model Category {
  id          String    @id @default(cuid())
  name        String
  slug        String    @unique
  description String?
  image       String?
  parentId    String?
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  parent   Category?  @relation("CategoryHierarchy", fields: [parentId], references: [id], onDelete: SetNull)
  children Category[] @relation("CategoryHierarchy")
  products Product[]

  @@map("categories")
}

model Product {
  id          String    @id @default(cuid())
  name        String
  description String?   @db.Text
  price       Decimal   @db.Decimal(10, 2)
  stock       Int       @default(0)
  images      String[]
  variants    Json?     // Product variants (e.g., size, color options)
  variantStock Json?    // Stock per variant combination (e.g., {"Size:M,Color:Red": 10})
  tags        String[]  // Product tags for filtering
  vendorId    String
  categoryId  String?
  viewCount   Int       @default(0)
  avgRating   Decimal?  @db.Decimal(2, 1)
  reviewCount Int       @default(0)
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  deletedAt   DateTime? // Soft delete - null means not deleted

  vendor        VendorProfile  @relation(fields: [vendorId], references: [id], onDelete: Cascade)
  category      Category?      @relation(fields: [categoryId], references: [id], onDelete: SetNull)
  cartItems     CartItem[]
  orderItems    OrderItem[]
  reviews       Review[]
  wishlistItems WishlistItem[]
  views         ProductView[]

  @@index([categoryId])
  @@index([vendorId])
  @@index([createdAt])
  @@index([deletedAt])
  @@map("products")
}

model Cart {
  id        String     @id @default(cuid())
  userId    String     @unique
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt

  user  User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  items CartItem[]

  @@map("carts")
}

model CartItem {
  id              String  @id @default(cuid())
  cartId          String
  productId       String
  quantity        Int     @default(1)
  selectedVariant String? // Selected variant combination (e.g., "Size:M,Color:Red")

  cart    Cart    @relation(fields: [cartId], references: [id], onDelete: Cascade)
  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@unique([cartId, productId, selectedVariant])
  @@map("cart_items")
}

model Order {
  id                String      @id @default(cuid())
  userId            String
  fullName          String?     // Buyer's full name
  phoneNumber       String?     // Buyer's phone number
  total             Decimal     @db.Decimal(10, 2)
  status            OrderStatus @default(PENDING)
  addressId         String
  couponId          String?
  discountAmount    Decimal?    @db.Decimal(10, 2)
  shippingMethod    String?
  trackingNumber    String?
  estimatedDelivery DateTime?
  createdAt         DateTime    @default(now())
  updatedAt         DateTime    @updatedAt

  user    User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  address Address     @relation(fields: [addressId], references: [id])
  coupon  Coupon?     @relation(fields: [couponId], references: [id], onDelete: SetNull)
  items   OrderItem[]
  reviews Review[]

  @@index([status])
  @@index([userId])
  @@index([createdAt])
  @@map("orders")
}

model OrderItem {
  id              String  @id @default(cuid())
  orderId         String
  productId       String
  quantity        Int
  price           Decimal @db.Decimal(10, 2)
  selectedVariant String? // Selected variant combination (e.g., "Size:M,Color:Red")

  order   Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product Product @relation(fields: [productId], references: [id])
  review  Review? // One review per order item

  @@index([orderId])
  @@index([productId])
  @@map("order_items")
}

model Address {
  id         String  @id @default(cuid())
  userId     String
  street     String
  city       String
  state      String
  zipCode    String
  country    String
  isDefault  Boolean @default(false)

  user   User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  orders Order[]

  @@index([userId])
  @@map("addresses")
}

// Review system
model Review {
  id             String   @id @default(cuid())
  productId      String
  userId         String
  orderId        String?        // Link to order (for order-based reviews)
  orderItemId    String? @unique // Link to specific order item (one review per item)
  rating         Int            // 1-5 (product rating)
  shippingRating Int?           // 1-5 (shipping rating, required for order reviews)
  title          String?
  comment        String?  @db.Text
  isVerified     Boolean  @default(false) // Did user purchase product?
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  product   Product    @relation(fields: [productId], references: [id], onDelete: Cascade)
  user      User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  order     Order?     @relation(fields: [orderId], references: [id], onDelete: SetNull)
  orderItem OrderItem? @relation(fields: [orderItemId], references: [id], onDelete: SetNull)

  @@unique([orderId, productId])
  @@index([productId])
  @@index([userId])
  @@index([orderId])
  @@map("reviews")
}

// Wishlist system
model Wishlist {
  id        String   @id @default(cuid())
  userId    String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user  User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  items WishlistItem[]

  @@map("wishlists")
}

model WishlistItem {
  id         String   @id @default(cuid())
  wishlistId String
  productId  String
  addedAt    DateTime @default(now())

  wishlist Wishlist @relation(fields: [wishlistId], references: [id], onDelete: Cascade)
  product  Product  @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@unique([wishlistId, productId])
  @@map("wishlist_items")
}

// Coupon/Discount system
model Coupon {
  id            String       @id @default(cuid())
  code          String       @unique
  description   String?
  discountType  DiscountType
  discountValue Decimal      @db.Decimal(10, 2)
  minPurchase   Decimal?     @db.Decimal(10, 2)
  maxDiscount   Decimal?     @db.Decimal(10, 2)
  usageLimit    Int?
  usageCount    Int          @default(0)
  validFrom     DateTime     @default(now())
  validUntil    DateTime?
  isActive      Boolean      @default(true)
  vendorId      String
  createdAt     DateTime     @default(now())
  updatedAt     DateTime     @updatedAt

  vendor VendorProfile @relation(fields: [vendorId], references: [id], onDelete: Cascade)
  orders Order[]

  @@index([vendorId])
  @@map("coupons")
}

// Product view tracking for analytics
model ProductView {
  id        String   @id @default(cuid())
  productId String
  userId    String?
  sessionId String?
  viewedAt  DateTime @default(now())

  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)
  user    User?   @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([productId])
  @@index([viewedAt])
  @@map("product_views")
}

// Shop Builder models

model ShopTemplate {
  id          String   @id @default(cuid())
  vendorId    String   @unique
  name        String   @default("My Shop")
  isPublished Boolean  @default(false)
  publishedComponents Json?  // Snapshot of components when published
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  vendor     VendorProfile  @relation(fields: [vendorId], references: [id], onDelete: Cascade)
  components ShopComponent[]

  @@map("shop_templates")
}

model ShopComponent {
  id         String        @id @default(cuid())
  templateId String
  type       ComponentType
  order      Int
  config     Json          // Stores component-specific configuration
  createdAt  DateTime      @default(now())
  updatedAt  DateTime      @updatedAt

  template ShopTemplate @relation(fields: [templateId], references: [id], onDelete: Cascade)

  @@unique([templateId, order])
  @@map("shop_components")
}
