@startuml
' Theme PlantUML dùng chung cho các sơ đồ kiến trúc Fluxify.
skinparam backgroundColor #FCFCFC
skinparam defaultFontName Segoe UI
skinparam dpi 150
skinparam shadowing false
skinparam linetype ortho
skinparam ArrowColor #4B5563
skinparam ArrowThickness 1
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

skinparam rectangle {
  RoundCorner 10
  BorderColor #334155
  FontColor #0F172A
}

skinparam actor {
  BorderColor #1E293B
  FontColor #0F172A
}

skinparam database {
  BorderColor #1E293B
  FontColor #0F172A
  BackgroundColor #E2E8F0
}

skinparam note {
  BackgroundColor #FEF9C3
  BorderColor #A16207
  FontColor #78350F
}

skinparam rectangle<<system>> {
  BackgroundColor #E0F2FE
  BorderColor #0C4A6E
}

skinparam rectangle<<frontend>> {
  BackgroundColor #DCFCE7
  BorderColor #14532D
}

skinparam rectangle<<backend>> {
  BackgroundColor #DBEAFE
  BorderColor #1E3A8A
}

skinparam rectangle<<data>> {
  BackgroundColor #EDE9FE
  BorderColor #5B21B6
}

skinparam rectangle<<external>> {
  BackgroundColor #F1F5F9
  BorderColor #475569
}

skinparam rectangle<<security>> {
  BackgroundColor #FEE2E2
  BorderColor #7F1D1D
}

!definelong COMMON_LEGEND()
legend right
|= Ký hiệu |= Ý nghĩa |
|<#E0F2FE>Hệ thống|Nền tảng hoặc ranh giới hệ thống|
|<#DCFCE7>Giao diện|Giao diện người dùng hoặc component phía client|
|<#DBEAFE>Backend|API, dịch vụ, hoặc logic nghiệp vụ|
|<#E2E8F0>Dữ liệu|Cơ sở dữ liệu hoặc thành phần lưu trữ|
|<#F1F5F9>Ngoài|Tích hợp bên thứ 3 hoặc hệ thống bên ngoài|
|<#FEE2E2>Bảo mật|Xác thực, phân quyền, hoặc rào cản bảo mật|
endlegend
!enddefinelong


title Fluxify UML - Mô hình lớp miền (Domain Class Model)

hide methods

class User {
  +id: String
  +email: String
  +name: String
  +role: Role
  +isActive: Boolean
}

class VendorProfile {
  +id: String
  +storeName: String
  +description: String
}

class Product {
  +id: String
  +name: String
  +price: Decimal
  +stock: Int
  +variantStock: Json?
  +deletedAt: DateTime?
}

class Category {
  +id: String
  +name: String
  +slug: String
  +parentId: String?
}

class Cart {
  +id: String
}

class CartItem {
  +id: String
  +quantity: Int
  +selectedVariant: String?
}

class Wishlist {
  +id: String
}

class WishlistItem {
  +id: String
}

class Address {
  +id: String
  +fullName: String
  +phone: String
  +city: String
}

class Coupon {
  +id: String
  +code: String
  +discountType: DiscountType
  +discountValue: Decimal
  +usageLimit: Int?
}

class Order {
  +id: String
  +status: OrderStatus
  +totalAmount: Decimal
}

class OrderItem {
  +id: String
  +quantity: Int
  +priceAtPurchase: Decimal
  +selectedVariant: String?
}

class Review {
  +id: String
  +rating: Int
  +comment: String
}

class ChatConversation {
  +id: String
}

class ChatMessage {
  +id: String
  +senderType: SenderType
  +content: String
  +isRead: Boolean
}

class ShopTemplate {
  +id: String
  +name: String
  +publishedComponents: Json?
}

class ShopComponent {
  +id: String
  +type: ComponentType
  +order: Int
  +config: Json
}

class ProductView {
  +id: String
  +sessionId: String?
}

class FavoriteShop {
  +id: String
}

User "1" -- "0..1" VendorProfile : sở hữu
User "1" -- "0..1" Cart : có
User "1" -- "0..1" Wishlist : có
User "1" -- "0..*" Address : lưu trữ
User "1" -- "0..*" Order : đặt hàng
User "1" -- "0..*" Review : viết
User "1" -- "0..*" ChatConversation : tham gia
User "1" -- "0..*" ProductView : tạo
User "1" -- "0..*" FavoriteShop : yêu thích

VendorProfile "1" -- "0..*" Product : bán
VendorProfile "1" -- "0..*" Coupon : phát hành
VendorProfile "1" -- "0..1" ShopTemplate : tùy chỉnh
VendorProfile "1" -- "0..*" ChatConversation : nhận
VendorProfile "1" -- "0..*" FavoriteShop : được theo dõi bởi

Category "1" -- "0..*" Product : phân loại
Category "0..1" -- "0..*" Category : cha-con

Cart "1" -- "0..*" CartItem : chứa
CartItem "*" --> "1" Product : tham chiếu

Wishlist "1" -- "0..*" WishlistItem : chứa
WishlistItem "*" --> "1" Product : tham chiếu

Order "1" -- "1" Address : giao đến
Order "1" -- "0..*" OrderItem : chứa
Order "0..*" --> "0..1" Coupon : áp dụng
OrderItem "*" --> "1" Product : tham chiếu

Review "*" --> "1" Product : đánh giá
Review "*" --> "0..1" OrderItem : đã mua hàng

ChatConversation "1" -- "0..*" ChatMessage : chứa

ShopTemplate "1" -- "0..*" ShopComponent : cấu thành từ

Product "1" -- "0..*" ProductView : được theo dõi bởi

COMMON_LEGEND()
@enduml





